--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from '@layouts/Layout.astro'
 
 const response = await fetch('https://futsal-api.carlosjgc.workers.dev/teams')
 const teams = await response.json()
