--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,12 @@
 ---
 const { title } = Astro.props
 ---
-<html lang="en">
+
+<html lang='en'>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale-1">
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+		<meta charset='utf-8' />
+		<meta name='viewport' content='width=device-width, initial-scale-1' />
+		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
 		<title>{title}</title>
 	</head>
 	<body>
