--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,27 +4,30 @@ import Layout from '@layouts/Layout.astro'
 const response = await fetch('https://futsal-api.carlosjgc.workers.dev/teams')
 const teams = await response.json()
 ---
-<Layout title="Futsal.dev">
-	<div class="container m-auto">
-		<header class="flex">
-			{teams.map(({ id, logo, name }) => (
-				<a href={`/teams/${id}`}>
-					<img class="aspect-square w-12" src={logo} alt={`${name} team badge`} />
-				</a>
-			))}
+
+<Layout title='Futsal.dev'>
+	<div class='container m-auto'>
+		<header class='flex'>
+			{
+				teams.map(({ id, logo, name }) => (
+					<a href={`/teams/${id}`}>
+						<img class='aspect-square w-12' src={logo} alt={`${name} team badge`} />
+					</a>
+				))
+			}
 			<nav>
 				<ul>
 					<li>
-						<a href="/teams">Teams</a>
+						<a href='/teams'>Teams</a>
 					</li>
 					<li>
-						<a href="/calendar">Calendar</a>
+						<a href='/calendar'>Calendar</a>
 					</li>
 					<li>
-						<a href="/top-scorers">Top Scorers</a>
+						<a href='/top-scorers'>Top Scorers</a>
 					</li>
 					<li>
-						<a href="/transfers">Transfers</a>
+						<a href='/transfers'>Transfers</a>
 					</li>
 				</ul>
 			</nav>
